--- a/app/views/experiences/new.html.erb
+++ b/app/views/experiences/new.html.erb
@@ -1,32 +1,32 @@
 <div class="container">
-  <div class="container">
-    <div class="row centered-form">
-      <div class="col-xs-12 col-sm-8 col-md-4">
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <h3 class="panel-title">Add to your profile experiences</h3>
-          </div>
-          <div class="panel-body">
-              <%= form_for [@user, @experience] do |f| %>
-            <div class="form-group">
-              <p> Type of job </p>
-              <%= f.text_field :jobtype_id, class: "form-control input-sm", placeholder: "Job type" %>
-            </div>
-            <div class="form-group">
-              <p> Please enter Employer name. </p>
-              <%= f.text_field :employer_name, class: "form-control input-sm", placeholder: "Employer name" %>
-            </div>
-            <div class="form-group">
-              <p> Please enter months of experiences. </p>
-              <%= f.text_field :months, class: "form-control input-sm", placeholder: "Months" %>
-            </div>
-            <div class="form-group">
-              <p> Please enter a description. </p>
-              <%= f.text_field :description, class: "form-control input-sm", placeholder: "Description" %>
-            </div>
-              <%= f.submit "Submit", class: "btn btn-info btn-block" %>
-            <% end %>
-          </div>
+  <div class="row centered-form">
+    <div class="col-xs-12 col-sm-8 col-md-4">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h3 class="panel-title">Add your experience to your profile</h3>
+        </div>
+        <div class="panel-body">
+          <%= form_for [@user, @experience] do |f| %>
+              <div class="form-group">
+                <%= f.label :jobtype_id, 'Job description' %>
+                <%= f.collection_select :jobtype_id, class: "form-control input-sm" %>
+              </div>
+              <div class="form-group">
+                <%= f.label :employer_name, 'Employer' %>
+                <%= f.text_field :employer_name, class: "form-control input-sm" %>
+              </div>
+              <div class="form-group">
+                <%= f.label :months, 'Months of experience' %>
+                <%= f.text_field :months, class: "form-control input-sm" %>
+              </div>
+              <div class="form-group">
+                <%= f.label :description, 'Additional description (optional)' %>
+                <%= f.text_field :description, class: "form-control input-sm" %>
+              </div>
+              <div class="form-group">
+                <%= f.submit "Add", class: "btn btn-info btn-block" %>
+              </div>
+          <% end %>
         </div>
       </div>
     </div>
