--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -68,7 +68,32 @@
               </div>
             </div>
           </div>
-        </div>
+
+        <% if current_user %>
+          <%= form_for [@user, @review] do |f| %>
+            <% if f.object.errors.any? %>
+              <div class="alert alert-danger">
+                <strong>The following errors prevented saving:</strong>
+                <ul>
+                  <% f.object.errors.full_messages.each do |error| %>
+                <li><%= error %></li>
+                  <% end %>
+                </ul>
+              </div>
+            <% end %>
+            <div class="field">
+              <div> Please add a comment and rate this product </div>
+              <%= f.text_area :comment %>
+              <%= f.select :rating, 1..5 %>
+            </div>
+            <div class="actions">
+              <%= f.submit %>
+            </div>
+          <% end %>
+        <% end %>
+
+        <br>
+
         <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
         See review
         </button>
@@ -97,3 +122,7 @@
     </div>
   </div>
 </div>
+
+
+
+
