--- a/app/views/jobs/new.html.erb
+++ b/app/views/jobs/new.html.erb
@@ -5,8 +5,8 @@
   <div class="row">
     <div class="col-sm-6 col-sm-offset-1">
       <%= form_for (@job) do |form| %>
-
-<% if form.object.errors.any? %>
+        <%= form.hidden_field :status, value: "open" %>
+        <% if form.object.errors.any? %>
           <div class="alert alert-danger">
             <strong>The following errors prevented saving:</strong>
             <ul>
