--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -14,7 +14,9 @@
             </div>
             <div class="card-info">
             <span class="card-title">
-              <%= @job.user.restaurant_name %>
+              <%= link_to (user_path(@job.user.id)) do %>
+                <strong><%= @job.user.restaurant_name %></strong>
+              <% end %>
             </span>
             </div>
           </div>
@@ -87,11 +89,17 @@
                   Description: <%= @job.description %>
                 </div>
               </div>
-            <div class="tab-pane fade in" id="tab2">
-              <div class="map">
-                <img src="<%= googleMapBuilderShow(@job.user.latitude, @job.user.longitude) %>">
+              <div class="tab-pane fade in" id="tab2">
+                <div class="address">
+                <%= @job.user.street_address %>,
+                  <%= @job.user.city %>,
+                  <%= @job.user.province %>,
+                  <%= @job.user.postal_code %>
+                </div>
+                <div class="map">
+                  <img src="<%= googleMapBuilderShow(@job.user.latitude, @job.user.longitude) %>">
+                </div>
               </div>
-            </div>
               <div class="tab-pane fade in" id="tab3">
                 <table class="table">
                   <thead>
@@ -243,54 +251,59 @@
                   <% end %>
                 </div>
               </div>
-            </div>
-            <div class="tab-pane fade in" id="tab2">
+              <div class="tab-pane fade in" id="tab2">
+                <div class="address">
+                  <%= @job.user.street_address %>,
+                  <%= @job.user.city %>,
+                  <%= @job.user.province %>,
+                  <%= @job.user.postal_code %>
+                </div>
               <div class="map">
                 <img src="<%= googleMapBuilderShow(@job.user.latitude, @job.user.longitude) %>">
               </div>
-            </div>
-            <div class="tab-pane fade in" id="tab3">
-              <table class="table">
-                <thead>
-                  <tr>
-                    <th> Comments</th>
-                  </tr>
-                  </thead>
-                  <tbody>
-                  <% @job.comments.reverse_each do |c| %>
-                      <tr>
-                        <td> <%= c.user.first_name %></td>
-                        <td> <%= c.comment %> </td>
-                      </tr>
-                  <% end %>
-                  </tbody>
-                </table>
-
-
+              </div>
+              <div class="tab-pane fade in" id="tab3">
                 <table class="table">
-                  <tr>
-                    <td>
-                      <button class="btn btn-primary btn-xs"
-                              type="button"
-                              data-toggle="collapse"
-                              data-target="#collapseExample"
-                              aria-expanded="false"
-                              aria-controls="collapseExample">
-                        Add comment
-                      </button>
-                    </td>
-                  </tr>
-                  <tr>
-                    <div class="collapse" id="collapseExample">
-                      <div class="well">
-                        <%= form_for [@job, @comment] do |f| %>
-                            <%= f.text_area :comment %>
-                            <%= f.button :submit, class: 'btn btn-primary btn-xs' %>
-                        <% end %>
+                  <thead>
+                    <tr>
+                      <th> Comments</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <% @job.comments.reverse_each do |c| %>
+                        <tr>
+                          <td> <%= c.user.first_name %></td>
+                          <td> <%= c.comment %> </td>
+                        </tr>
+                    <% end %>
+                    </tbody>
+                  </table>
+
+                  <table class="table">
+                    <tr>
+                      <td>
+                        <button class="btn btn-primary btn-xs"
+                                type="button"
+                                data-toggle="collapse"
+                                data-target="#collapseExample"
+                                aria-expanded="false"
+                                aria-controls="collapseExample">
+                          Add comment
+                        </button>
+                      </td>
+                    </tr>
+                    <tr>
+                      <div class="collapse" id="collapseExample">
+                        <div class="well">
+                          <%= form_for [@job, @comment] do |f| %>
+                              <%= f.text_area :comment %>
+                              <%= f.button :submit, class: 'btn btn-primary btn-xs' %>
+                          <% end %>
+                        </div>
                       </div>
-                    </div>
-                  </tr>
-                </table>
+                    </tr>
+                  </table>
+                </div>
               </div>
             </div>
           </div>
